manifests/scots-lab/apps/rook-ceph/v1_namespace_rook-ceph.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: rook-ceph
    pod-security.kubernetes.io/enforce: privileged
  name: rook-ceph
