manifests/scots-lab/apps/rook-ceph/networking.k8s.io_v1_networkpolicy_rook-ceph-deny-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rook-ceph-deny-external-ingress
  namespace: rook-ceph
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: rook-ceph
  - from:
    - namespaceSelector:
        matchLabels:
          name: kube-prometheus-system
    ports:
    - port: 9283
      protocol: TCP
  podSelector: {}
  policyTypes:
  - Ingress
